--- a/app.json
+++ b/app.json
@@ -1,16 +1,13 @@
 {
   "expo": {
-    "name": "QRyou",
-    "slug": "starterProject",
-    "privacy": "public",
+    "name": "QR-You",
+    "slug": "QR-You",
+    "privacy": "unlisted",
     "sdkVersion": "32.0.0",
-    "platforms": [
-      "ios",
-      "android"
-    ],
+    "platforms": ["ios", "android"],
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
+    "icon": "./assets/images/1024New.png",
     "splash": {
       "image": "./assets/images/splash.png",
       "resizeMode": "contain",
@@ -19,11 +16,10 @@
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.chase.radigan.qryou"
     }
   }
 }
