--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "native-base": "^2.12.1",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
+    "react-native-elements": "^1.1.0",
+    "react-native-modal": "^11.0.1",
     "react-native-qrcode": "^0.2.7",
-    "react-navigation": "^3.0.9"
+    "react-navigation": "^3.0.9",
+    "react-navigation-transitions": "^1.0.10"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.0.0",
